# ChangeLog for app-text/cabocha
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/cabocha/Attic/ChangeLog,v 1.6 2010/11/25 12:37:10 hattya Exp $

  25 Nov 2010; Akinori Hattori <hattya@gentoo.org>
  -files/cabocha-0.52-amd64.patch:
  remove unused files. fixes bug #344189.

*cabocha-0.60_pre4 (08 Oct 2008)

  08 Oct 2008; MATSUU Takuto <matsuu@gentoo.org> +cabocha-0.60_pre4.ebuild:
  Version bumped, bug #239605. Clean up.

  02 Nov 2006; Mamoru KOMACHI <usata@gentoo.org> -cabocha-0.52.ebuild,
  cabocha-0.53.ebuild:
  Removed old ebuild and stabilized 0.53. Added ~amd64 keyword.

  26 Jun 2006; Mamoru KOMACHI <usata@gentoo.org>
  +files/cabocha-0.53-pm.patch, cabocha-0.53.ebuild:
  Fixed compilation for the first time.

*cabocha-0.53 (02 Feb 2006)

  02 Feb 2006; Mamoru KOMACHI <usata@gentoo.org>
  +files/cabocha-0.52-amd64.patch, cabocha-0.52.ebuild,
  +cabocha-0.53.ebuild:
  Version bumped. Backported amd64 patch.

*cabocha-0.52 (22 May 2005)

  22 May 2005; Mamoru KOMACHI <usata@gentoo.org> +metadata.xml,
  +cabocha-0.52.ebuild:
  Initial import.
